fix: cors 관련 설정 수정 - setAllowedOrigins